--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
-    "@prisma/client": "^5.13.0",
+    "@prisma/client": "^5.14.0",
     "@types/lodash": "^4.17.1",
     "csv-parser": "^3.0.0",
     "reflect-metadata": "^0.2.0",
@@ -48,7 +49,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
-    "prisma": "^5.13.0",
+    "prisma": "^5.14.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
