--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start:dev": "node keys/generateKeys.ts && nest start --watch",
+    "generateKeys": "node keys/generateKeys.ts",
     "seed:dev": "node prisma/seeder.js",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "node keys/generateKeys.ts node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
