--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "node keys/generateKeys.ts && nest start --watch",
+    "start:dev": "SET NODE_ENV=development && node keys/generateKeys.ts && nest start --watch",
+    "dev:prod": "SET NODE_ENV=production && node keys/generateKeys.ts && nest start --watch",
     "generateKeys": "node keys/generateKeys.ts",
     "seed:dev": "node prisma/seeder.js",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node keys/generateKeys.ts node dist/main",
+    "migrate:prod": "npx dotenv -e .env.production -- npx prisma migrate dev --name init",
+    "push:prod": "npx dotenv -e .env.production -- npx prisma db push --name init",
+    "start:prod": "SET NODE_ENV=production && node keys/generateKeys.ts && node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
