--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,9 @@ lerna-debug.log*
 .env.development.local
 .env.test.local
 .env.production.local
+.env.development
+.env.test
+.env.production
 .env.local
 
 # temp directory
