--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "SET NODE_ENV=development && node keys/generateKeys.ts && nest start --watch",
-    "dev:prod": "SET NODE_ENV=production && node keys/generateKeys.ts && nest start --watch",
+    "start:dev": "export NODE_ENV=developement && node keys/generateKeys.ts && nest start --watch",
+    "dev:prod": "export NODE_ENV=production && node keys/generateKeys.ts && nest start --watch",
     "generateKeys": "node keys/generateKeys.ts",
     "seed:dev": "node prisma/seeder.js",
     "start:debug": "nest start --debug --watch",
@@ -38,7 +38,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
-    "@prisma/client": "^5.15.0",
+    "@prisma/client": "^5.15.1",
     "@types/lodash": "^4.17.1",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
@@ -73,7 +73,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
-    "prisma": "^5.15.0",
+    "prisma": "^5.15.1",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
