--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "gen-key": "node keys/generateKeys.ts",
     "start": "nest start",
-    "start:dev": "export NODE_ENV=developement && node keys/generateKeys.ts && nest start --watch",
-    "dev:prod": "export NODE_ENV=production && node keys/generateKeys.ts && nest start --watch",
+    "start:dev": "export NODE_ENV=developement && npm run gen-key && nest start --watch",
+    "dev:prod": "export NODE_ENV=production && npm run gen-key && npm run prod:prisma-generate && nest start --watch",
+    "prod:prisma-generate": "npx dotenv -e .env.production -- npx prisma generate",
+    "prod:prisma-push": "npx dotenv -e .env.production -- npx prisma db push",
     "generateKeys": "node keys/generateKeys.ts",
     "seed:dev": "node prisma/seeder.js",
     "start:debug": "nest start --debug --watch",
@@ -21,7 +24,10 @@
     "push:prod": "npx dotenv -e .env.production -- npx prisma db push --name init",
     "start:prod": "SET NODE_ENV=production && node keys/generateKeys.ts && node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
+    "test:docker-up": "docker-compose --env-file .env.test up -d",
+    "test:prisma-generate": "dotenv -e .env.test -- npx prisma generate",
+    "test:prisma-push": "dotenv -e .env.test -- npx prisma db push",
+    "test": "export NODE_ENV=test && npm run gen-key && npm run test:docker-up && npm run test:prisma-generate && npm run test:prisma-push && jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
