fix: dto dockerFile

--- a/package.json
+++ b/package.json
@@ -10,21 +10,28 @@
   },
   "scripts": {
     "build": "nest build",
+    "docker:build": "docker build -t finance-master-service .",
+    "docker:run": "docker-compose -f docker-compose.dev.yml --env-file .env.production up --build -d",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "gen-key": "node keys/generateKeys.ts",
     "start": "nest start",
-    "start:dev": "export NODE_ENV=developement && npm run gen-key && nest start --watch",
+    "start:dev": "export NODE_ENV=development && npm run gen-key && npm run dev:docker-up && npm run dev:prisma-generate && nest start --watch",
     "dev:prod": "export NODE_ENV=production && npm run gen-key && npm run prod:prisma-generate && nest start --watch",
     "prod:prisma-generate": "npx dotenv -e .env.production -- npx prisma generate",
     "prod:prisma-push": "npx dotenv -e .env.production -- npx prisma db push",
     "studio:prod": "npx dotenv -e .env.production -- npx prisma studio",
+    "studio:dev": "npx dotenv -e .env.development -- npx prisma studio",
     "generateKeys": "node keys/generateKeys.ts",
-    "seed:dev": "node prisma/seeder.js",
+    "seed:dev": "export NODE_ENV=development && npm run dev:docker-up && npm run dev:prisma-generate && node prisma/seeder.js",
     "start:debug": "nest start --debug --watch",
     "migrate:prod": "npx dotenv -e .env.production -- npx prisma migrate dev --name init",
     "push:prod": "npx dotenv -e .env.production -- npx prisma db push --name init",
     "start:prod": "SET NODE_ENV=production && node keys/generateKeys.ts && node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "dev:docker-up": "docker-compose --env-file .env.development up -d",
+    "test:docker-down": "docker-compose --env-file .env.test down",
+    "dev:prisma-generate": "npx dotenv -e .env.development -- npx prisma generate",
+    "dev:prisma-push": "npx dotenv -e .env.development -- npx prisma db push",
     "test:docker-up": "docker-compose --env-file .env.test up -d",
     "test:prisma-generate": "dotenv -e .env.test -- npx prisma generate",
     "test:prisma-push": "dotenv -e .env.test -- npx prisma db push",
